<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P4_02_Read" Id="{3f535cf0-f89c-47b6-b024-aa7e121618f3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P4_02_Read
VAR
	fbDBRead    	:FB_PLCDBCmdEvt(sNetID:=CONST.AMS_NETID, tTimeout:=DEFAULT_ADS_TIMEOUT);
	
	tableColumns	:ARRAY [0..5] OF STRING(50) := ['DateTime', 'User', 'Event', 'Description', 'OldValue', 'NewValue'];
	arrParam		:ARRAY [0..5] OF ST_ExpParameter := [(sParaName := 'DateTime', nParaSize := 4, eParaType := E_EXPPARAMETERTYPE.DateTime), 
														(sParaName := 'User', nParaSize := 101, eParaType := E_EXPPARAMETERTYPE.STRING_), 
														(sParaName := 'Event', nParaSize := 101, eParaType := E_EXPPARAMETERTYPE.STRING_), 
														(sParaName := 'Description', nParaSize := 101, eParaType := E_EXPPARAMETERTYPE.STRING_), 
														(sParaName := 'OldValue', nParaSize := 101, eParaType := E_EXPPARAMETERTYPE.STRING_), 
														(sParaName := 'NewValue', nParaSize := 101, eParaType := E_EXPPARAMETERTYPE.STRING_)];
	stRecord		:ARRAY[0..999] OF ST_AuditTrail;	
	
	stDBParam 		:ST_AuditTrail;	
	nRecords		:UDINT;
	sCmd			:STRING[300];

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//**************HMI FILTER - COMPOSE QUERY***************
sCmd:='SELECT * FROM `audit_trail`';
IF GV.stHMI.stAudit_Ctrl.bFilter THEN
	
	IF GV.stHMI.stAudit_Ctrl.enFilter_Event <> 0 THEN
		sCmd:=CONCAT(sCmd,'WHERE `Event` = $'');
		sCmd:=CONCAT(sCmD,TO_STRING(GV.stHMI.stAudit_Ctrl.enFilter_Event));
		sCmd:=CONCAT(sCmd,'$'');
	END_IF
	IF GV.stHMI.stAudit_Ctrl.sFilter_User <> GV.sEmptyString THEN
		IF GV.stHMI.stAudit_Ctrl.enFilter_Event = 0 THEN
			sCmd:=CONCAT(sCmd,'WHERE `User` LIKE $'%');
		ELSE
			sCmd:=CONCAT(sCmd,'AND `User` LIKE $'%');
		END_IF
		sCmd:=CONCAT(sCmD,GV.stHMI.stAudit_Ctrl.sFilter_User);
		sCmd:=CONCAT(sCmd,'$'');
	END_IF
	IF GV.stHMI.stAudit_Ctrl.sFilter_Key <> GV.sEmptyString THEN
		IF GV.stHMI.stAudit_Ctrl.enFilter_Event = 0 AND GV.stHMI.stAudit_Ctrl.sFilter_User = GV.sEmptyString THEN
			sCmd:=CONCAT(sCmd,'WHERE `Description` LIKE $'%');
		ELSE
			sCmd:=CONCAT(sCmd,'AND `Description` LIKE $'%');
		END_IF
		sCmd:=CONCAT(sCmD,GV.stHMI.stAudit_Ctrl.sFilter_Key);
		sCmd:=CONCAT(sCmd,'%$'');
	END_IF
	IF GV.stHMI.stAudit_Ctrl.dtFilter_From <> GV.stHMI.stAudit_Ctrl.dtFilter_To THEN
		IF GV.stHMI.stAudit_Ctrl.enFilter_Event = 0 AND GV.stHMI.stAudit_Ctrl.sFilter_User = GV.sEmptyString AND GV.stHMI.stAudit_Ctrl.sFilter_Key = GV.sEmptyString THEN
				sCmd:=CONCAT(sCmd,'WHERE `DateTime` BETWEEN $'');
			ELSE
				sCmd:=CONCAT(sCmd,'AND `DateTime` BETWEEN $'');
			END_IF
			sCmd:=CONCAT(sCmd,RIGHT(DT_TO_STRING(GV.stHMI.stAudit_Ctrl.dtFilter_From),19));
			sCmd:=CONCAT(sCmd,'$' AND $'');
			sCmd:=CONCAT(sCmd,RIGHT(DT_TO_STRING(GV.stHMI.stAudit_Ctrl.dtFilter_To),19));
			sCmd:=CONCAT(sCmd,'$'');
	END_IF
	GV.stTX_Python.sAuditExportQuery:=sCmd;
END_IF
sCmd:=CONCAT(sCmd,' ORDER BY `DateTime` DESC');


ACT_Cmd();]]></ST>
    </Implementation>
    <Action Name="ACT_Cmd" Id="{1c80c268-82c6-48d9-b706-4a8784f281ca}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"FB_PLCDBCmdEvt.ExecuteDataReturn"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbDBRead"</v>
                          <v n="Type">"FB_PLCDBCmdEvt"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">3L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems">
                          <o t="BoxTreeBox">
                            <v n="BoxType">"OR"</v>
                            <o n="Instance" t="Operand">
                              <n n="Operand" />
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">true</v>
                              <v n="Id">74L</v>
                            </o>
                            <o n="OutputItems" t="OutputItemList">
                              <l2 n="OutputItems">
                                <n />
                              </l2>
                            </o>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">true</v>
                              <v n="Extensible">false</v>
                            </o>
                            <n n="InputFlags" />
                            <l2 n="InputItems" cet="BoxTreeOperand">
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"GV.stHMI.stAudit_Ctrl.bReadDB"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">9L</v>
                                </o>
                                <v n="Id">8L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"GV.stHMI.stAudit_Ctrl.bFilter"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">73L</v>
                                </o>
                                <v n="Id">72L</v>
                              </o>
                            </l2>
                            <o n="InputParam" t="ParamList">
                              <l2 n="Names" />
                              <l2 n="Types" />
                            </o>
                            <o n="OutputParam" t="ParamList">
                              <l2 n="Names" cet="String">
                                <v></v>
                              </l2>
                              <l2 n="Types" cet="String">
                                <v>BOOL</v>
                              </l2>
                            </o>
                            <v n="CallType" t="Operator">Or</v>
                            <v n="EN">false</v>
                            <v n="ENO">false</v>
                            <n n="STSnippet" />
                            <v n="ContainsExtensibleInputs">false</v>
                            <v n="ProvidesSTSnippet">false</v>
                            <v n="Id">75L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"CONST.DB_ID"</v>
                              <v n="Type">"UDINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">13L</v>
                            </o>
                            <v n="Id">12L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ADR(sCmd)"</v>
                              <v n="Type">"POINTER TO STRING(300)"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">15L</v>
                            </o>
                            <v n="Id">14L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"SIZEOF(sCmd)"</v>
                              <v n="Type">"UINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <v n="Id">16L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ADR(stDBParam)"</v>
                              <v n="Type">"POINTER TO ST_AuditTrail"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"SIZEOF(stDBParam)"</v>
                              <v n="Type">"UINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">21L</v>
                            </o>
                            <v n="Id">20L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ADR(arrParam)"</v>
                              <v n="Type">"POINTER TO ARRAY [0..5] OF ST_ExpParameter"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">23L</v>
                            </o>
                            <v n="Id">22L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"SIZEOF(arrParam)"</v>
                              <v n="Type">"UINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">25L</v>
                            </o>
                            <v n="Id">24L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"0"</v>
                              <v n="Type">"INT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">27L</v>
                            </o>
                            <v n="Id">26L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"1000"</v>
                              <v n="Type">"INT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">29L</v>
                            </o>
                            <v n="Id">28L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ADR(stRecord)"</v>
                              <v n="Type">"POINTER TO ARRAY [0..999] OF ST_AuditTrail"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">31L</v>
                            </o>
                            <v n="Id">30L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"SIZEOF(stRecord)"</v>
                              <v n="Type">"UINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">33L</v>
                            </o>
                            <v n="Id">32L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"ADR(nRecords)"</v>
                              <v n="Type">"POINTER TO UDINT"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">35L</v>
                            </o>
                            <v n="Id">34L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>EN</v>
                            <v>hDBID</v>
                            <v>pExpression</v>
                            <v>cbExpression</v>
                            <v>pData</v>
                            <v>cbData</v>
                            <v>pParameter</v>
                            <v>cbParameter</v>
                            <v>nStartIndex</v>
                            <v>nRecordCount</v>
                            <v>pReturnData</v>
                            <v>cbReturnData</v>
                            <v>pRecords</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>UDINT</v>
                            <v>POINTER TO BYTE</v>
                            <v>UDINT</v>
                            <v>POINTER TO BYTE</v>
                            <v>UDINT</v>
                            <v>POINTER TO ARRAY [0..MAX_DBCOLUMNS] OF ST_ExpParameter</v>
                            <v>UDINT</v>
                            <v>UDINT</v>
                            <v>UDINT</v>
                            <v>POINTER TO BYTE</v>
                            <v>UDINT</v>
                            <v>POINTER TO UDINT</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>ENO</v>
                            <v>ExecuteDataReturn</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">Method</v>
                        <v n="EN">true</v>
                        <v n="ENO">true</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">4L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">2L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"GV.stHMI.stAudit_Ctrl.bReadDB"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">3</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">77L</v>
                            </o>
                            <o>
                              <v n="Operand">"GV.stHMI.stAudit_Ctrl.bFilter"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">3</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">76L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"fbDBRead.bBusy"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">1</v>
                              <v n="Fixed">true</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">37L</v>
                          </o>
                          <v n="Id">36L</v>
                        </o>
                        <v n="Id">39L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>